--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,12 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": 1
+    "no-console": 1,
+    "curly": 2,
+    "eqeqeq": 2,
+    "quotes": ["error", "single", {
+      "avoidEscape": true,
+      "allowTemplateLiterals": true
+    }]
   }
 }
