--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,10 @@
     "keyword-spacing": ["error", {
       "before": true,
       "after": true
-    }]
+    }],
+    "no-multiple-empty-lines": ["error", {
+      "max": 1
+    }],
+    "eol-last": "error"
   }
 }
