--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/bartekkustra/zsrs-discordbot#readme",
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "validator": "^13.5.2"
   }
 }
