--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
     "dotenv": "^8.2.0",
+    "sequelize": "^6.12.0-alpha.1",
+    "sqlite3": "^5.0.2",
     "validator": "^13.5.2"
   }
 }
