--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "rimraf ./build && tsc",
     "lint": "eslint . --ext .ts --fix"
   },
+  "pre-push": [
+    "build"
+  ],
   "engines": {
     "node": "16"
   },
@@ -30,6 +33,7 @@
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "nodemon": "^2.0.7",
+    "pre-push": "^0.1.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.5.2"
